--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 *{
-    margin:0;
+    /* margin:0; */
     box-sizing: border-box;
 }
 .body{
@@ -21,7 +21,7 @@ background-color: #e6e6e6;
     background-color: #dfdfdf;
     width: 335px;
     height: 94px;
-    padding-top: 10px;
+    /* padding-top: 10px; */
     margin-bottom: 10px;
     position: relative;
 }
